--- a/student_progress.html
+++ b/student_progress.html
@@ -7,8 +7,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #f9f9f9;
+            font-family: 'Arial', Helvetica, sans-serif;
+            background-color: #ffffff; /* White background */
             margin: 0;
             padding: 0;
         }
@@ -16,6 +16,16 @@
         h1 {
             text-align: center;
             margin-top: 20px;
+            font-family: 'Arial', sans-serif; /* More professional font */
+            color: #00796b;
+            font-size: 36px; /* Larger font size */
+        }
+
+        .logo {
+            width: 100px; /* Adjusted logo width */
+            height: auto; /* Maintain aspect ratio */
+            margin: 20px; /* Margin for spacing */
+            display: block;
         }
 
         #student-progress-container {
@@ -30,10 +40,11 @@
 
         .sidebar {
             width: 25%;
-            background-color: #333;
-            color: white;
+            background-color: #e0f7fa; /* Light blue sidebar */
+            color: #333;
             padding: 20px;
             border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
         }
 
         .student-profile {
@@ -51,13 +62,20 @@
             .student-profile h3 {
                 margin: 0;
                 font-size: 18px;
-                color: #ffdd57;
+                color: black;
             }
 
         .sidebar select, .sidebar button {
             width: 100%;
             padding: 10px;
             margin-bottom: 10px;
+            border-radius: 5px;
+            border: none;
+        }
+
+        .sidebar select {
+            background-color:white;
+            color: black;
         }
 
         .main-content {
@@ -68,6 +86,7 @@
             font-size: 24px;
             margin: 20px 0;
             text-align: center;
+            color: #00796b;
         }
 
         .chart-container {
@@ -82,20 +101,21 @@
         }
 
         button {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #ffeb3b; /* Yellow button color */
+            color: black;
             padding: 10px 20px;
             border: none;
             cursor: pointer;
             font-size: 16px;
             border-radius: 5px;
+            transition: background-color 0.3s, transform 0.2s;
         }
 
             button:hover {
-                background-color: #45a049;
+                background-color: #fdd835; /* Darker yellow on hover */
+                transform: scale(1.05);
             }
 
-        /* Logout Message */
         #logoutMessage {
             display: none;
             position: fixed;
@@ -112,13 +132,15 @@
 </head>
 <body>
 
-    <h1>Student Progress Dashboard</h1>
+    <img src="kinder.png" alt="Logo" class="logo"> <!-- Logo outside the container -->
+
+
     <div class="container">
         <!-- Sidebar with Student Profile and Navigation -->
         <div class="sidebar">
             <!-- Student Profile -->
             <div class="student-profile">
-                <img src="student-photo.jpg" alt="Student Photo">
+                <img src="user.png" alt="Student Profile Picture"> <!-- Added Profile Image -->
                 <h3 id="studentName">Student Name</h3>
                 <p id="studentGrade">Grade: Kindergarten</p>
             </div>
@@ -127,9 +149,6 @@
             <h2>Select Student</h2>
             <select id="studentSelect" onchange="loadStudentData()">
                 <option value="">Choose Student</option>
-                <option value="student1">Student 1</option>
-                <option value="student2">Student 2</option>
-                <option value="student3">Student 3</option>
             </select>
 
             <!-- Navigation Buttons -->
@@ -140,21 +159,11 @@
         <!-- Main Content for Progress and Performance -->
         <div class="main-content">
             <div id="student-progress-container">
-                <!-- Canvas elements for displaying the charts -->
+                <h1>Student Progress Dashboard</h1>
+                <!-- Canvas for Overall Progress chart -->
                 <div class="chart-container">
+                    <div class="section-title">Overall Progress</div>
                     <canvas id="overallProgressChart"></canvas>
-                </div>
-                <div class="chart-container">
-                    <canvas id="alphabetQuizChart"></canvas>
-                </div>
-                <div class="chart-container">
-                    <canvas id="shapesQuizChart"></canvas>
-                </div>
-                <div class="chart-container">
-                    <canvas id="colorsQuizChart"></canvas>
-                </div>
-                <div class="chart-container">
-                    <canvas id="numbersQuizChart"></canvas>
                 </div>
             </div>
         </div>
@@ -164,7 +173,7 @@
     <div id="logoutMessage">Logging out...</div>
 
     <script>
-        let overallProgressChart, alphabetQuizChart, shapesQuizChart, colorsQuizChart, numbersQuizChart;
+        let overallProgressChart;
 
         // Function to navigate to the home page
         function goHome() {
@@ -173,153 +182,75 @@
 
         // Function to logout
         function logout() {
-            // Display logout message
             const logoutMessage = document.getElementById('logoutMessage');
             logoutMessage.style.display = 'block';
-            // Redirect to home after a brief delay
             setTimeout(() => {
                 goHome();
-            }, 2000); // 2000 milliseconds = 2 seconds
+            }, 2000);
+        }
+
+        // Load student data from localStorage and populate the dropdown
+        function populateStudentList() {
+            const studentSelect = document.getElementById('studentSelect');
+            const students = JSON.parse(localStorage.getItem('students')) || [];
+
+            students.forEach(student => {
+                const option = document.createElement('option');
+                option.value = student.number; // Use student number as the value
+                option.textContent = `${student.firstName} ${student.lastName}`;
+                studentSelect.appendChild(option);
+            });
         }
 
         // Function to load student data
         function loadStudentData() {
-            const student = document.getElementById('studentSelect').value;
+            const studentNumber = document.getElementById('studentSelect').value;
+            const students = JSON.parse(localStorage.getItem('students')) || [];
+            const student = students.find(s => s.number === studentNumber);
+
             if (student) {
-                const students = {
-                    student1: { name: "Randel", grade: "Kindergarten", photo: "student1.jpg" },
-                    student2: { name: "Exequiel", grade: "Kindergarten", photo: "student2.jpg" },
-                    student3: { name: "Juliana", grade: "Kindergarten", photo: "student3.jpg" }
-                };
+                document.getElementById('studentName').textContent = `${student.firstName} ${student.lastName}`;
+                document.getElementById('studentGrade').textContent = "Grade: Kindergarten"; // Update as needed
 
-                // Update student profile
-                document.getElementById('studentName').textContent = students[student].name;
-                document.getElementById('studentGrade').textContent = "Grade: " + students[student].grade;
-                document.querySelector('.student-profile img').src = students[student].photo;
-
-                const studentData = getStudentData(student);
-                renderCharts(studentData);
+                // Use the Week 1 score and set Weeks 2-4 to 0
+                const week1Score = student.score; // Assuming score is for Week 1
+                const scores = [week1Score, 0, 0, 0]; // Week 1 score and zero for Weeks 2-4
+                renderChart(scores);
             }
         }
 
-        // Function to get data for the selected student (Student 1, Student 2, etc.)
-        function getStudentData(student) {
-            if (student === 'student1') {
-                return {
-                    overallProgress: [10, 3, 10, 7], // Alphabet, Shapes, Colors, Numbers
-                    alphabetQuiz: [10, , , ,],
-                    shapesQuiz: [3, , , ,],
-                    colorsQuiz: [10, , , ,],
-                    numbersQuiz: [7, , , ,]
-                };
-            } else if (student === 'student2') {
-                return {
-                    overallProgress: [10, 10, 10, 10], // Alphabet, Shapes, Colors, Numbers
-                    alphabetQuiz: [10,],
-                    shapesQuiz: [10,],
-                    colorsQuiz: [10,],
-                    numbersQuiz: [10,]
-                };
-            } else if (student === 'student3') {
-                return {
-                    overallProgress: [80, 70, 60, 75], // Alphabet, Shapes, Colors, Numbers
-                    alphabetQuiz: [7, 6, 5, 8, 6],
-                    shapesQuiz: [8, 7, 6, 5, 8],
-                    colorsQuiz: [7, 6, 8, 9, 8],
-                    numbersQuiz: [9, 6, 8, 7, 9]
-                };
-            }
-        }
-
-        // Function to render the charts using Chart.js
-        function renderCharts(data) {
-            // Destroy existing charts if any
+        // Function to render the chart using Chart.js
+        function renderChart(scores) {
             if (overallProgressChart) overallProgressChart.destroy();
-            if (alphabetQuizChart) alphabetQuizChart.destroy();
-            if (shapesQuizChart) shapesQuizChart.destroy();
-            if (colorsQuizChart) colorsQuizChart.destroy();
-            if (numbersQuizChart) numbersQuizChart.destroy();
 
-            // Create the Overall Progress chart (categories: Alphabet, Shapes, Colors, Numbers)
-            const overallProgressCtx = document.getElementById('overallProgressChart').getContext('2d');
-            overallProgressChart = new Chart(overallProgressCtx, {
+            const ctx = document.getElementById('overallProgressChart').getContext('2d');
+            overallProgressChart = new Chart(ctx, {
                 type: 'bar',
                 data: {
-                    labels: ['Alphabet', 'Shapes', 'Colors', 'Numbers'],
+                    labels: ['Week 1', 'Week 2', 'Week 3', 'Week 4'], // Updated labels for weeks
                     datasets: [{
-                        label: 'Overall Progress',
-                        data: data.overallProgress,
-                        backgroundColor: ['rgba(255, 99, 132, 0.6)', 'rgba(75, 192, 192, 0.6)', 'rgba(153, 102, 255, 0.6)', 'rgba(255, 159, 64, 0.6)'],
-                        borderColor: ['rgba(255, 99, 132, 1)', 'rgba(75, 192, 192, 1)', 'rgba(153, 102, 255, 1)', 'rgba(255, 159, 64, 1)'],
-                        borderWidth: 1
-                    }]
-                }
-            });
-
-            // Create the Alphabet Quiz chart
-            const alphabetQuizCtx = document.getElementById('alphabetQuizChart').getContext('2d');
-            alphabetQuizChart = new Chart(alphabetQuizCtx, {
-                type: 'bar',
-                data: {
-                    labels: ['Q1', 'Q2', 'Q3'],
-                    datasets: [{
-                        label: 'Alphabet Quiz',
-                        data: data.alphabetQuiz,
-                        backgroundColor: 'rgba(255, 99, 132, 0.6)',
-                        borderColor: 'rgba(255, 99, 132, 1)',
-                        borderWidth: 1
-                    }]
-                }
-            });
-
-            // Create the Shapes Quiz chart
-            const shapesQuizCtx = document.getElementById('shapesQuizChart').getContext('2d');
-            shapesQuizChart = new Chart(shapesQuizCtx, {
-                type: 'bar',
-                data: {
-                    labels: ['Q1', 'Q2', 'Q3'],
-                    datasets: [{
-                        label: 'Shapes Quiz',
-                        data: data.shapesQuiz,
+                        label: 'Score (%)',
+                        data: scores, // Use the scores array
                         backgroundColor: 'rgba(75, 192, 192, 0.6)',
                         borderColor: 'rgba(75, 192, 192, 1)',
                         borderWidth: 1
                     }]
-                }
-            });
-
-            // Create the Colors Quiz chart
-            const colorsQuizCtx = document.getElementById('colorsQuizChart').getContext('2d');
-            colorsQuizChart = new Chart(colorsQuizCtx, {
-                type: 'bar',
-                data: {
-                    labels: ['Q1', 'Q2', 'Q3'],
-                    datasets: [{
-                        label: 'Colors Quiz',
-                        data: data.colorsQuiz,
-                        backgroundColor: 'rgba(153, 102, 255, 0.6)',
-                        borderColor: 'rgba(153, 102, 255, 1)',
-                        borderWidth: 1
-                    }]
-                }
-            });
-
-            // Create the Numbers Quiz chart
-            const numbersQuizCtx = document.getElementById('numbersQuizChart').getContext('2d');
-            numbersQuizChart = new Chart(numbersQuizCtx, {
-                type: 'bar',
-                data: {
-                    labels: ['Q1', 'Q2', 'Q3'],
-                    datasets: [{
-                        label: 'Numbers Quiz',
-                        data: data.numbersQuiz,
-                        backgroundColor: 'rgba(255, 159, 64, 0.6)',
-                        borderColor: 'rgba(255, 159, 64, 1)',
-                        borderWidth: 1
-                    }]
+                },
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true,
+                            max: 100
+                        }
+                    }
                 }
             });
         }
+
+        // Initialize student list on page load
+        document.addEventListener('DOMContentLoaded', () => {
+            populateStudentList();
+        });
     </script>
 </body>
 </html>
